fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -722,6 +722,10 @@ textarea {
 	color: #333333;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.4em 1em 0.4em 0;
 	padding: 0;
